# SPlayer-prototype

./: .gitignore  README.md  install.sh
TODO/: TODO.md
src/: CLI_menu.cpp  CLI_menu.h  CMakeLists.txt  CmakeList.txt  chat.py  control.cpp  control.h  fileSelector.h  main.cpp  main.py  navigation.h  playback_time.cpp  playback_time.h
src/output/: CLI_menu.cpp  CLI_menu.h  control.cpp  control.h  main.cpp  makefile
